# SpectroMap

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/: example_pipeline.py
src/spectromap/: __init__.py  audio.py  cli.py  config.py  io_utils.py  logging_utils.py  melody.py  models.py  peaks.py  pipeline.py  plotting.py  similarity.py
tests/: test_similarity.py
