[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectromap"
version = "0.1.0"
description = "Constellation-based melodic similarity analysis for WAV audio fragments."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Brian Martínez-Rodríguez"}
]
keywords = ["music-information-retrieval", "audio", "spectrogram", "melody", "similarity", "fingerprinting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
  "pandas>=1.5,<3",
  "matplotlib>=3.7,<4"
]

[project.urls]
Homepage = "https://github.com/BrianComposer/spectromap"
Repository = "https://github.com/BrianComposer/spectromap"
Issues = "https://github.com/BrianComposer/spectromap/issues"

[project.scripts]
spectromap = "spectromap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
